tests/checker/diagnostics/0063_core_not_int_06.ml
let not (x : bool) : bool = x
let _ = (not 0, false)
